tenzir/tests/exec/expr/escape/basic/invalid_hex.tql
// error: true

from {
  x: "\xFH"
}
